@@ -1,3 +1,10 @@
+2011-05-17  Dominique Dumont  <domi.dumont@free.fr> 1.325
+
+    * TkUI.pm: disable double-click because it trigger
+      editor when double clicking outside of Hlist
+    * NodeEditor.pm: respect order of element when 
+      completing the pane widget after warp
+
 2011-05-17  Dominique Dumont  <domi.dumont@free.fr> 1.324
 
    * Depends on Config::Model 1.244
